--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -94,6 +94,7 @@ spidertron_remote=Start controlling your Spidertrons remotely with this piece of
 show-spidertron-legs=Show Spidertron Legs
 stack-spidertron-recipes=Stack Spidertron Recipes
 change-spidertron-remote-recipe=Rebalance Spidertron Remote Recipe & Tech
+spidertrontiers-use-fuel=Spidertrons will use fuel
 
 [mod-setting-description]
 show-spidertron-legs=Can be turned off for people who with arachnaphobia, or who just find them difficult to look at. Can be turned off and on without breaking a save.
